Fix missing babel dependencies to build dist
style fix for misaligned timestamps

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -443,6 +443,7 @@ form {
     font-weight: 700;
     margin-top: -5px;
     display: flex;
+    align-items: flex-end;
   }
 
   .messages__item__metadata span {
